# torchfont

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  Cargo.toml  README.md  mise.toml  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.github/: dependabot.yml
.github/scripts/: set_pytorch_cpu.py
.github/workflows/: CI.yml  ci.yml  docs.yml  pages.yml  release.yml  static-analysis.yml  test.yml  tests.yml  translate.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/en/: index.md
docs/en/examples/: index.md
docs/en/guide/: dataloader.md  getting-started.md  git-repos.md  glyph-data-format.md  google-fonts.md  subset.md  what-is-torchfont.md
docs/en/reference/: datasets.md  io.md  transforms.md
docs/ja/: index.md
docs/ja/examples/: index.md
docs/ja/guide/: dataloader.md  getting-started.md  git-repos.md  glyph-data-format.md  google-fonts.md  subset.md  what-is-torchfont.md
docs/ja/reference/: datasets.md  io.md  transforms.md
docs/locale/ja/LC_MESSAGES/: index.po
docs/locale/ja/LC_MESSAGES/api/: index.po
docs/locale/ja/LC_MESSAGES/contributor_guide/: index.po
docs/locale/ja/LC_MESSAGES/getting_started/: index.po
docs/locale/ja/LC_MESSAGES/user_guide/: index.po
docs/reference/datasets/: folder.md  google_fonts.md  repo.md
docs/reference/io/: pens.md
docs/reference/transforms/: transforms.md
docs/source/: conf.py  getting_started.rst  index.rst  llms.txt
docs/source/api/: index.rst  modules.rst  torchfont.datasets.rst  torchfont.io.rst  torchfont.rst  torchfont.transforms.rst
docs/source/contributor_guide/: index.rst
docs/source/getting_started/: index.rst
docs/source/locale/ja/LC_MESSAGES/: index.po
docs/source/locale/ja/LC_MESSAGES/api/: index.po
docs/source/locale/ja/LC_MESSAGES/contributor_guide/: index.po
docs/source/locale/ja/LC_MESSAGES/getting_started/: index.po
docs/source/user_guide/: index.rst
examples/: dataloader.py  font_awesome.py  google_fonts.py  material_design_icons.py  repo.py  source_han_sans.py  subset_by_targets.py  transforms.py
python/torchfont/: __init__.py  _torchfont.pyi  constants.py
python/torchfont/datasets/: folder.py  google_fonts.py  repo.py
python/torchfont/io/: git.py  pens.py
scripts/: dataset.sh
src/: error.rs  lib.rs  pen.rs
src/dataset/: entry.rs  fs.rs  index.rs  io.rs  mod.rs
src/torchfont/: __init__.py
src/torchfont/datasets/: __init__.py  folder.py  google_fonts.py  repo.py
src/torchfont/io/: pens.py
src/torchfont/transforms/: __init__.py  pens.py  transforms.py
test/: load_fonts.py
tests/: smoke_test.py  test_dataset.py  test_datasets.py  test_folder.py  test_google_fonts.py  test_repo.py
torchfont/: _torchfont.pyi
torchfont/datasets/: folder.py
torchfont/io/: git.py
typings/fontTools/: __init__.pyi
typings/fontTools/pens/: __init__.pyi  basePen.pyi
typings/fontTools/ttLib/: __init__.pyi  ttFont.pyi  ttGlyphSet.pyi
typings/fontTools/ttLib/tables/: __init__.pyi  _f_v_a_r.pyi  _h_e_a_d.pyi
typings/lightning/pytorch/utilities/: combined_loader.pyi
