[project]
name = "torchfont"
version = "0.1.0"
description = "Datasets, Transforms and Models specific to Vector Fonts"
readme = "README.md"
authors = [{ name = "Takumu Fujioka", email = "fjktkm@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["fonttools>=4.57.0", "numpy>=2.3.3", "tqdm>=4.67.1"]

[project.optional-dependencies]
torch = ["torch>=2.8.0"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.12.4"]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*fork.*:DeprecationWarning"]

[tool.setuptools.package-data]
"torchfont" = ["py.typed"]
