[project]
name = "torchfont"
version = "0.1.0"
description = "Datasets, Transforms and Models specific to Vector Fonts"
readme = "README.md"
authors = [{ name = "Takumu Fujioka", email = "fjktkm@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["fonttools>=4.20", "numpy>=1.26", "tqdm>=4.60"]

[project.optional-dependencies]
torch = ["torch>=2.6.0"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.12.4"]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*fork.*:DeprecationWarning"]

[tool.setuptools.package-data]
"torchfont" = ["py.typed"]
