[project]
name = "torchfont"
description = "Datasets, Transforms and Models specific to Vector Fonts"
readme = "README.md"
authors = [{ name = "Takumu Fujioka", email = "fjktkm@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.6.0",
]

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "mypy>=1.18.2",
    "numpy>=2.2.6",
    "pytest>=8.4.2",
    "ruff>=0.12.4",
    "types-tqdm>=4.67.0.20250809",
]
docs = [
    "furo>=2025.9.25",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.3.2",
]
examples = [
    "lightning>=2.5.5",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*fork.*:DeprecationWarning"]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "typings"

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EXE002"]

[tool.ruff.lint.per-file-ignores]
".github/scripts/**/*.py" = ["D", "INP001"]
"docs/**/*.py" = ["A001", "D", "INP001"]
"examples/**/*.py" = ["D", "T201"]
"python/torchfont/datasets/repo.py" = ["S603"]
"python/torchfont/datasets/*.py" = ["PLR0913"]
"tests/**/*.py" = ["D", "S101"]
"typings/**/*.pyi" = ["D", "N"]

[tool.maturin]
python-source = "python"
module-name = "torchfont._torchfont"

[tool.setuptools.package-data]
"torchfont" = ["py.typed"]
